--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Rye&display=swap");
 
 :root {
-  margin: 0 auto;
-  text-align: center;
+  /* colors */
+  --color-background: #1d1d1d;
+  --color-text: #fabf59;
+  --color-text-developer: #6c6161;
+  --color-link: #f3e2c5;
+  --color-link-hover: #f5b15f;
+  --color-error: #e74c3c;
+  --color-logo: var(--color-text);
+  --color-logo-hover: #f3daae;
+  --color-button-background: #f9b50c;
+  --color-button-border: var(--color-button-background);
+}
 }
 
 html {
