--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   --color-button-background: #f9b50c;
   --color-button-border: var(--color-button-background);
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 html {
@@ -21,9 +26,10 @@ html {
 
 body {
   font-family: "Rye", Arial, sans-serif;
+  color: var(--color-text);
   margin: 0;
   padding: 0;
-  background-color: #1d1d1d;
+  background-color: var(--color-background);
 }
 
 h1,
@@ -36,8 +42,38 @@ p {
   margin-top: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+img {
+  object-fit: cover;
+}
+
+a {
+  color: var(--color-link);
+  text-decoration: none;
+}
+a:hover {
+  color: var(--color-link-hover);
+}
+
 *,
 ::after,
 ::before {
   box-sizing: border-box;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
