--- a/src/components/Categories/index.module.css
+++ b/src/components/Categories/index.module.css
@@ -1,18 +1,49 @@
 .categories {
-  margin-top: 24px;
   display: flex;
   gap: 3em;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .category {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
+  border-radius: 20px;
+  cursor: pointer;
+  position: relative;
+  transition: transform 0.3s ease;
+  overflow: hidden;
 }
 
-.category__button {
-  margin: 0 40px;
+.category:hover {
+  transform: scale(1.1);
+}
+
+.category::after {
+  content: "Read More";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(15, 15, 15, 0) 0%,
+    rgba(15, 15, 15, 1) 100%
+  );
+  color: white;
+  opacity: 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 0.5em;
+  transition: height 0.3s ease, opacity 0.3s ease;
+}
+
+.category:hover::after {
+  height: 50%;
+  opacity: 1;
+}
+
+.category__image {
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
