--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -3,7 +3,7 @@
   font-size: 18px;
   line-height: 1.25;
   padding: 18px 36px;
-  background-color: #f9b50c;
+  background-color: var(--color-button-background);
   border-radius: 100px;
   border: 1px solid transparent;
   cursor: pointer;
@@ -13,5 +13,5 @@
 .button:hover {
   color: #f9b50c;
   background-color: transparent;
-  border: 1px solid #f9b50c;
+  border: 1px solid var(--color-button-border);
 }
