instralled sass; defined vars; restructured files due to scss usage

--- a/src/components/BooksList/index.module.scss
+++ b/src/components/BooksList/index.module.scss
@@ -8,14 +8,12 @@
   display: flex;
   align-items: flex-start;
   gap: 2em;
-}
-
-.book__img {
-  max-width: 20em;
-  width: 100%;
-  height: auto;
-}
-
-.book__details {
-  flex: 1;
+  &__image {
+    max-width: 20em;
+    width: 100%;
+    height: auto;
+  }
+  &__details {
+    flex: 1;
+  }
 }
