--- a/src/components/Logo/index.module.scss
+++ b/src/components/Logo/index.module.scss
@@ -1,14 +1,16 @@
+@use "@/styles/colors" as colors;
+
 a.logo {
   white-space: nowrap;
   text-align: center;
-  color: var(--color-logo);
+  color: colors.$logo;
   text-decoration: none;
   position: relative;
   display: inline-block;
   background: linear-gradient(
     to right,
-    var(--color-logo) 50%,
-    var(--color-logo-hover) 50%
+    colors.$logo 50%,
+    colors.$logo-hover 50%
   );
   background-size: 200% 100%;
   background-clip: text;
@@ -16,8 +18,7 @@ a.logo {
   color: transparent;
   transition: background-position 0.2s ease-in-out;
   font-size: 3em;
-}
-
-a.logo:hover {
-  background-position: -100% 0;
+  &:hover {
+    background-position: -100% 0;
+  }
 }
