--- a/src/components/Title/index.module.scss
+++ b/src/components/Title/index.module.scss
@@ -1,6 +1,8 @@
+@use "@/styles/colors" as colors;
+
 .title {
   margin: 1em 0;
   font-size: 3em;
-  color: var(--color-text);
+  color: colors.$text;
   text-align: center;
 }
