--- a/src/layouts/Footer/index.module.scss
+++ b/src/layouts/Footer/index.module.scss
@@ -1,6 +1,8 @@
+@use "@/styles/colors" as colors;
+
 .footer {
   padding: 1em 3em;
-  color: var(--color-text-developer);
+  color: colors.$text-credits;
   text-align: center;
 }
 
