--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @use "breakpoints";
 @use "colors";
+@use "fonts";
 @import url("https://fonts.googleapis.com/css2?family=Rye&display=swap");
 
 :root {
