--- a/src/components/Logo/index.module.scss
+++ b/src/components/Logo/index.module.scss
@@ -1,6 +1,8 @@
 @use "@/styles/colors" as colors;
 
 a.logo {
+  grid-area: logo;
+  justify-self: start;
   white-space: nowrap;
   text-align: center;
   color: colors.$logo;
@@ -17,7 +19,6 @@ a.logo {
   -webkit-background-clip: text;
   color: transparent;
   transition: background-position 0.2s ease-in-out;
-  font-size: 3em;
   &:hover {
     background-position: -100% 0;
   }
