--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,15 +1,21 @@
-// Colors
+//// COLORS
 
+//global
+$error: #e74c3c;
+// website background
 $background: #1d1d1d;
+// texts
 $text: #fabf59;
 $text-credits: #6c6161;
+// links
 $link: #f3e2c5;
 $link-hover: #f5b15f;
-$error: #e74c3c;
+$link-active: #f4d500;
+
+// logo
 $logo: $text;
 $logo-hover: #f3daae;
+// buttons
 $button-background: #f9b50c;
 $button-text: $button-background;
 $button-border: $button-background;
-$logo: $text;
-$logo-hover: #f3daae;
