--- a/src/layouts/Layout/index.module.scss
+++ b/src/layouts/Layout/index.module.scss
@@ -1,4 +1,9 @@
+@use "@/styles/breakpoints" as breakpoints;
+
 .main {
   flex: 1;
-  padding: 1em 6em;
+  padding: 4em 3em;
+  @media (min-width: breakpoints.$desktop) {
+    padding: 6em 5em;
+  }
 }
