--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,9 @@
 #root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  @media (min-width: breakpoints.$desktop) {
+    min-height: 100vh;
+  }
 }
 
 html {
@@ -17,11 +19,34 @@ html {
 }
 
 body {
-  font-family: "Rye", Arial, sans-serif;
   color: colors.$text;
   margin: 0;
   padding: 0;
-  background-color: colors.$background;
+  background: colors.$background;
+  background: linear-gradient(
+    135deg,
+    #1e1e1e 0%,
+    #2b2a2e 30%,
+    #4d3f39 60%,
+    #0f0f0f 100%
+  );
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  @media (min-width: breakpoints.$desktop) {
+    background: linear-gradient(
+        180deg,
+        rgba(29, 29, 29, 0.75) 0%,
+        rgba(29, 29, 29, 0.9) 40%,
+        rgba(29, 29, 29, 0.9) 60%,
+        rgba(29, 29, 29, 1) 100%
+      ),
+      url("/images/bg-home.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+  }
 }
 
 h1,
@@ -32,6 +57,7 @@ h5,
 h6,
 p {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 ul {
@@ -42,6 +68,7 @@ ul {
 
 img {
   max-width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
