--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $error: #e74c3c;
 $background: #1d1d1d;
 // texts
 $text: #fabf59;
+$text-dark: #2e271b;
 $text-credits: #6c6161;
 // links
 $link: #f3e2c5;
