--- a/src/pages/Books/index.module.scss
+++ b/src/pages/Books/index.module.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   gap: 1em;
   @media (min-width: breakpoints.$desktop) {
     flex-direction: row;
