--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -44,7 +44,7 @@
     }
   }
   &::after {
-    content: "Read More";
+    content: attr(data-label);
     position: absolute;
     bottom: 0;
     left: 0;
